@@ -15,6 +15,7 @@ figure,
 footer,
 header,
 hgroup,
+main,
 nav,
 section {
   display: block;
