@@ -6,6 +6,7 @@ figure,
 footer,
 header,
 hgroup,
+main,
 nav,
 section {
 	display: block;
