@@ -144,7 +144,7 @@ else
 	<div class="body">
 		<div class="container<?php echo ($params->get('fluidContainer') ? '-fluid' : '');?>">
 			<!-- Header -->
-			<div class="header">
+			<header class="header">
 				<div class="header-inner clearfix">
 					<a class="brand pull-left" href="<?php echo $this->baseurl; ?>">
 						<?php echo $logo;?> <?php if ($this->params->get('sitedescription')) { echo '<div class="site-description">'. htmlspecialchars($this->params->get('sitedescription')) .'</div>'; } ?>
@@ -153,11 +153,11 @@ else
 						<jdoc:include type="modules" name="position-0" style="none" />
 					</div>
 				</div>
-			</div>
+			</header>
 			<?php if ($this->countModules('position-1')) : ?>
-			<div class="navigation">
+			<nav class="navigation">
 				<jdoc:include type="modules" name="position-1" style="none" />
-			</div>
+			</nav>
 			<?php endif; ?>
 			<jdoc:include type="modules" name="banner" style="xhtml" />
 			<div class="row-fluid">
@@ -170,14 +170,14 @@ else
 				</div>
 				<!-- End Sidebar -->
 				<?php endif; ?>
-				<div id="content" class="<?php echo $span;?>">
+				<main id="content" class="<?php echo $span;?>">
 					<!-- Begin Content -->
 					<jdoc:include type="modules" name="position-3" style="xhtml" />
 					<jdoc:include type="message" />
 					<jdoc:include type="component" />
 					<jdoc:include type="modules" name="position-2" style="none" />
 					<!-- End Content -->
-				</div>
+				</main>
 				<?php if ($this->countModules('position-7')) : ?>
 				<div id="aside" class="span3">
 					<!-- Begin Right Sidebar -->
@@ -189,14 +189,14 @@ else
 		</div>
 	</div>
 	<!-- Footer -->
-	<div class="footer">
+	<footer class="footer">
 		<div class="container<?php echo ($params->get('fluidContainer') ? '-fluid' : '');?>">
 			<hr />
 			<jdoc:include type="modules" name="footer" style="none" />
 			<p class="pull-right"><a href="#top" id="back-top"><?php echo JText::_('TPL_PROTOSTAR_BACKTOTOP'); ?></a></p>
 			<p>&copy; <?php echo $sitename; ?> <?php echo date('Y');?></p>
 		</div>
-	</div>
+	</footer>
 	<jdoc:include type="modules" name="debug" style="none" />
 </body>
 </html>
