@@ -29,6 +29,7 @@ $ -> Language fix or change
  # [#30727] A unpublished or deleted tag is still visible in 'List of all tags' menu item.  Thanks David Hurley
  # [#30744] tag mappings are not deleted after a tag is deleted.  Thanks Thomas Hunziker
  # [#30566] Tag Items List Layout Background Alternating Color Bug.  Thanks Seth Warburton
+ ^ [#30659] Adds html5 elements to Protostar.  Thanks Seth Warburton
 
 03-May-2013 Jean-Marie Simonet
  # [#30694] Backend toolbar buttons have forbidden attribute href. Thanks David Hurley
